chg (main): update CI
- add matrix for MW 1.43

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,13 @@ jobs:
             coverage: false
             experimental: false
           - mediawiki_version: '1.42'
-            php_version: 8.1
+            php_version: 8.2
+            database_type: mysql
+            database_image: "mysql:8"
+            coverage: false
+            experimental: false
+          - mediawiki_version: '1.43'
+            php_version: 8.2
             database_type: mysql
             database_image: "mysql:8"
             coverage: false
